<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asiantech.internship.winter.layouteditor.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="26dp" />


    <ImageView
        android:id="@+id/imgThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:background="@drawable/img_thumbnail"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icLogo"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="54dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="@string/textview_text_scratch"
        android:textColor="#363837"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/icLogo"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icLogo"
        app:layout_constraintTop_toTopOf="@+id/icLogo" />

    <TextView
        style="@style/H3BlackLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/textview_text_welcome_back"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/icLogo" />

    <TextView
        android:id="@+id/tv1"
        style="@style/ParagraphLeftTextGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/textview_text_please_login_to_continue"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/imgThumbnail" />

    <TextView
        android:id="@+id/tv2"
        style="@style/ParagraphLeftTextSubtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/textview_text_email_address"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/Lead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/edittext_hint_enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:text="@string/edittext_text_user_email_com"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/textview_text_password"
        android:textColor="#a8a8a8"
        android:textSize="14.5sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


    <TextView
        style="@style/ParagraphLeftTextGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_text_forgot_password"
        app:layout_constraintBottom_toBottomOf="@+id/tv3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edittext_hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:lineSpacingExtra="1.5sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv3" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_login"
        android:text="@string/button_text_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16.5sp"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <TextView
        android:id="@+id/tv4"
        style="@style/ParagraphCenterTextSubtle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/textview_text_new_to_scratch"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:letterSpacing="0.02"
        android:text="@string/textview_text_create_account_here"
        android:textColor="#30be76"
        android:textSize="16.5sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tv4" />
</androidx.constraintlayout.widget.ConstraintLayout>
